@@ -23,23 +23,18 @@
 
 /**
  * @test
- * @run testng/othervm -Djava.security.manager=allow -Dsun.net.maxDatagramSockets=32 UdpSocket
+ * @run testng/othervm UdpSocket
  * @summary Basic test for a Socket to a UDP socket
  */
 
 import java.io.IOException;
-import java.lang.ref.WeakReference;
 import java.net.InetAddress;
 import java.net.InetSocketAddress;
 import java.net.Socket;
 import java.net.SocketAddress;
 import java.nio.ByteBuffer;
 import java.nio.channels.DatagramChannel;
-import java.security.Permission;
 import java.util.Arrays;
-import java.util.ArrayDeque;
-import java.util.Deque;
-import java.net.BindException;
 
 import org.testng.annotations.Test;
 import static org.testng.Assert.*;
@@ -81,81 +76,6 @@ public class UdpSocket {
                 assertEquals(Arrays.copyOf(array1, n), Arrays.copyOf(array2, n),
                             "Unexpected contents");
             }
-        }
-    }
-
-    /**
-     * Test that the number of UDP sockets is limited when running with a
-     * security manager.
-     */
-    public void testMaxSockets() throws Exception {
-        int limit = Integer.getInteger("sun.net.maxDatagramSockets");
-
-        // security manager grants all permissions
-        var securityManager = new SecurityManager() {
-            @Override public void checkPermission(Permission perm) { }
-        };
-
-        System.setSecurityManager(securityManager);
-        Deque<Socket> sockets = new ArrayDeque<>();
-        try {
-            // create the maximum number of sockets
-            for (int i=0; i<limit; i++) {
-                sockets.offer(newUdpSocket());
-            }
-
-            // try to create another socket - should fail
-            try {
-                Socket s = newUdpSocket();
-                s.close();
-                assertTrue(false);
-            } catch (IOException expected) { }
-
-            // close one socket
-            sockets.pop().close();
-
-            // try to create another socket - should succeed
-            Socket s = newUdpSocket();
-
-            // unreference the socket and wait for it to be closed by the cleaner
-            var ref = new WeakReference<>(s);
-            s = null;
-            while (ref.get() != null) {
-                System.gc();
-                Thread.sleep(100);
-            }
-
-            // try to create another socket - should succeed
-            s = newUdpSocket();
-            s.close();
-        } finally {
-            closeAll(sockets);
-            System.setSecurityManager(null);
-        }
-    }
-
-
-    private Socket newUdpSocket() throws IOException, InterruptedException {
-        BindException unexpected = null;
-        for (int i=0; i < MAX_RETRIES; i++) {
-            try {
-                return new Socket(InetAddress.getLoopbackAddress(), 8000, false);
-            } catch (BindException be) {
-                unexpected = be;
-                if (i != MAX_RETRIES - 1) {
-                    System.out.printf("BindException caught: retry Socket creation [%s/%s]%n",
-                            i + 1, MAX_RETRIES);
-                    Thread.sleep(10 + 10 * i);
-                }
-            }
-        }
-        throw unexpected;
-    }
-
-    private void closeAll(Deque<Socket> sockets) throws IOException {
-        Socket s;
-        while ((s = sockets.poll()) != null) {
-            s.close();
         }
     }
 }
